--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -1,15 +1,245 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8">
-  <title>Page Title</title>
+
+  <head>
+    <title> BunBun bake shop</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
   
   <body>
 
-    <h1>I am the solution to HW1!</h1>
+    <header>
+      <img id="shop-logo" src="../assets/logo/logo-01.svg" alt="shop-logo">
+      <div class="header-menu">
+        <div class="menu-list">
+          <p>PRODUCTS</p>
+          <p>CART</p>
+        </div>
 
-    <p>
-        And I can link to <a href="./otherpage.html">other pages.</a>
-    </p>
+        <hr style="height:3px;color:black;background-color:black;margin-left:0; margin-bottom: 4rem;">
+
+        <h2 style="font-weight: 300;font-size: 28px;">Our hand-made cinnamon rolls</h2>
+
+      </div>
+    </header>
+
+    <main>
+
+      <div class="menu-row">
+
+        <div class="menu-item">
+          <div class="item-image"></div>
+
+          <h3>Original cinnamon roll</h3>
+
+          <div class="glazing">
+            <label for="bake">Glazing:</label>
+            <select name="bake" class="bake">
+              <option value="keep-original">Keep original</option>
+              <option value="sugar-milk">Sugar milk</option>
+              <option value="vanilla-milk">Vanilla milk</option>
+              <option value="double-chocolate">Double chocolate</option>
+            </select>
+          </div>
+
+          <div class="pack-size">
+            <div>Pack size:</div>
+            <div class="size-button">
+              <button class="button1" autofocus>1</button>
+              <button class="button1">3</button>
+              <button class="button1">6</button>
+              <button class="button1">12</button>
+            </div>
+          </div>
+
+          <div class="price-cart">
+            <div class="price">$ 2.49</div>
+            <div class="cart">
+              <button class="button2">Add to Cart</button>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="menu-item">
+          <div class="item-image" id="apple"></div>
+
+          <h3>Apple cinnamon roll</h3>
+
+          <div class="glazing">
+            <label for="bake">Glazing:</label>
+            <select name="bake" class="bake">
+              <option value="keep-original">Keep original</option>
+              <option value="sugar-milk">Sugar milk</option>
+              <option value="vanilla-milk">Vanilla milk</option>
+              <option value="double-chocolate">Double chocolate</option>
+            </select>
+          </div>
+
+          <div class="pack-size">
+            <div>Pack size:</div>
+            <div class="size-button">
+              <button class="button1" autofocus>1</button>
+              <button class="button1">3</button>
+              <button class="button1">6</button>
+              <button class="button1">12</button>
+            </div>
+          </div>
+
+          <div class="price-cart">
+            <div class="price">$ 3.49</div>
+            <div class="cart">
+              <button class="button2">Add to Cart</button>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="menu-item">
+          <div class="item-image" id="raisin"></div>
+
+          <h3>Raisin cinnamon roll</h3>
+
+          <div class="glazing">
+            <label for="bake">Glazing:</label>
+            <select name="bake" class="bake">
+              <option value="keep-original">Keep original</option>
+              <option value="sugar-milk">Sugar milk</option>
+              <option value="vanilla-milk">Vanilla milk</option>
+              <option value="double-chocolate">Double chocolate</option>
+            </select>
+          </div>
+
+          <div class="pack-size">
+            <div>Pack size:</div>
+            <div class="size-button">
+              <button class="button1" autofocus>1</button>
+              <button class="button1">3</button>
+              <button class="button1">6</button>
+              <button class="button1">12</button>
+            </div>
+          </div>
+
+          <div class="price-cart">
+            <div class="price">$ 2.99</div>
+            <div class="cart">
+              <button class="button2">Add to Cart</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+      <div class="menu-row">
+
+        <div class="menu-item">
+          <div class="item-image" id="walnut"></div>
+
+          <h3>Walnut cinnamon roll</h3>
+
+          <div class="glazing">
+            <label for="bake">Glazing:</label>
+            <select name="bake" class="bake">
+              <option value="keep-original">Keep original</option>
+              <option value="sugar-milk">Sugar milk</option>
+              <option value="vanilla-milk">Vanilla milk</option>
+              <option value="double-chocolate">Double chocolate</option>
+            </select>
+          </div>
+
+          <div class="pack-size">
+            <div>Pack size:</div>
+            <div class="size-button">
+              <button class="button1" autofocus>1</button>
+              <button class="button1">3</button>
+              <button class="button1">6</button>
+              <button class="button1">12</button>
+            </div>
+          </div>
+
+          <div class="price-cart">
+            <div class="price">$ 3.49</div>
+            <div class="cart">
+              <button class="button2">Add to Cart</button>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="menu-item">
+          <div class="item-image" id="double-chocolate"></div>
+
+          <h3>Double-chocolate cinnamon roll</h3>
+
+          <div class="glazing">
+            <label for="bake">Glazing:</label>
+            <select name="bake" class="bake">
+              <option value="keep-original">Keep original</option>
+              <option value="sugar-milk">Sugar milk</option>
+              <option value="vanilla-milk">Vanilla milk</option>
+              <option value="double-chocolate">Double chocolate</option>
+            </select>
+          </div>
+
+          <div class="pack-size">
+            <div>Pack size:</div>
+            <div class="size-button">
+              <button class="button1" autofocus>1</button>
+              <button class="button1">3</button>
+              <button class="button1">6</button>
+              <button class="button1">12</button>
+            </div>
+          </div>
+
+          <div class="price-cart">
+            <div class="price">$ 3.99</div>
+            <div class="cart">
+              <button class="button2">Add to Cart</button>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="menu-item">
+          <div class="item-image" id="strawberry"></div>
+
+          <h3>Strawberry cinnamon roll</h3>
+
+          <div class="glazing">
+            <label for="bake">Glazing:</label>
+            <select name="bake" class="bake">
+              <option value="keep-original">Keep original</option>
+              <option value="sugar-milk">Sugar milk</option>
+              <option value="vanilla-milk">Vanilla milk</option>
+              <option value="double-chocolate">Double chocolate</option>
+            </select>
+          </div>
+
+          <div class="pack-size">
+            <div>Pack size:</div>
+            <div class="size-button">
+              <button class="button1" autofocus>1</button>
+              <button class="button1">3</button>
+              <button class="button1">6</button>
+              <button class="button1">12</button>
+            </div>
+          </div>
+
+          <div class="price-cart">
+            <div class="price">$ 3.99</div>
+            <div class="cart">
+              <button class="button2">Add to Cart</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+
+    </main>
 
   </body>
 </html>
+
+
