--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <meta charset="UTF-8">
 
-  <head>
-    <title> BunBun bake shop</title>
-    <link rel="stylesheet" href="./style.css">
-  </head>
+ 
+  <title> BunBun bake shop</title>
+  <link rel="stylesheet" href="./style.css">
   
   <body>
 
@@ -34,8 +33,8 @@
           <h3>Original cinnamon roll</h3>
 
           <div class="glazing">
-            <label for="bake">Glazing:</label>
-            <select name="bake" class="bake">
+            <label for="original-cinnamon">Glazing:</label>
+            <select name="bake" id="original-cinnamon">
               <option value="keep-original">Keep original</option>
               <option value="sugar-milk">Sugar milk</option>
               <option value="vanilla-milk">Vanilla milk</option>
@@ -68,8 +67,8 @@
           <h3>Apple cinnamon roll</h3>
 
           <div class="glazing">
-            <label for="bake">Glazing:</label>
-            <select name="bake" class="bake">
+            <label for="apple-cinnamon">Glazing:</label>
+            <select name="bake" id="apple-cinnamon">
               <option value="keep-original">Keep original</option>
               <option value="sugar-milk">Sugar milk</option>
               <option value="vanilla-milk">Vanilla milk</option>
@@ -80,7 +79,7 @@
           <div class="pack-size">
             <div>Pack size:</div>
             <div class="size-button">
-              <button class="button1" autofocus>1</button>
+              <button class="button1">1</button>
               <button class="button1">3</button>
               <button class="button1">6</button>
               <button class="button1">12</button>
@@ -102,8 +101,8 @@
           <h3>Raisin cinnamon roll</h3>
 
           <div class="glazing">
-            <label for="bake">Glazing:</label>
-            <select name="bake" class="bake">
+            <label for="raisin-cinnamon">Glazing:</label>
+            <select name="bake" id="raisin-cinnamon">
               <option value="keep-original">Keep original</option>
               <option value="sugar-milk">Sugar milk</option>
               <option value="vanilla-milk">Vanilla milk</option>
@@ -114,7 +113,7 @@
           <div class="pack-size">
             <div>Pack size:</div>
             <div class="size-button">
-              <button class="button1" autofocus>1</button>
+              <button class="button1">1</button>
               <button class="button1">3</button>
               <button class="button1">6</button>
               <button class="button1">12</button>
@@ -139,8 +138,8 @@
           <h3>Walnut cinnamon roll</h3>
 
           <div class="glazing">
-            <label for="bake">Glazing:</label>
-            <select name="bake" class="bake">
+            <label for="walnut-cinnamon">Glazing:</label>
+            <select name="bake" id="walnut-cinnamon">
               <option value="keep-original">Keep original</option>
               <option value="sugar-milk">Sugar milk</option>
               <option value="vanilla-milk">Vanilla milk</option>
@@ -151,7 +150,7 @@
           <div class="pack-size">
             <div>Pack size:</div>
             <div class="size-button">
-              <button class="button1" autofocus>1</button>
+              <button class="button1">1</button>
               <button class="button1">3</button>
               <button class="button1">6</button>
               <button class="button1">12</button>
@@ -173,8 +172,8 @@
           <h3>Double-chocolate cinnamon roll</h3>
 
           <div class="glazing">
-            <label for="bake">Glazing:</label>
-            <select name="bake" class="bake">
+            <label for="double-chocolate-cinnamon">Glazing:</label>
+            <select name="bake" id="double-chocolate-cinnamon">
               <option value="keep-original">Keep original</option>
               <option value="sugar-milk">Sugar milk</option>
               <option value="vanilla-milk">Vanilla milk</option>
@@ -185,7 +184,7 @@
           <div class="pack-size">
             <div>Pack size:</div>
             <div class="size-button">
-              <button class="button1" autofocus>1</button>
+              <button class="button1">1</button>
               <button class="button1">3</button>
               <button class="button1">6</button>
               <button class="button1">12</button>
@@ -207,8 +206,8 @@
           <h3>Strawberry cinnamon roll</h3>
 
           <div class="glazing">
-            <label for="bake">Glazing:</label>
-            <select name="bake" class="bake">
+            <label for="strawberry-cinnamon">Glazing:</label>
+            <select name="bake" id="strawberry-cinnamon">
               <option value="keep-original">Keep original</option>
               <option value="sugar-milk">Sugar milk</option>
               <option value="vanilla-milk">Vanilla milk</option>
@@ -219,7 +218,7 @@
           <div class="pack-size">
             <div>Pack size:</div>
             <div class="size-button">
-              <button class="button1" autofocus>1</button>
+              <button class="button1">1</button>
               <button class="button1">3</button>
               <button class="button1">6</button>
               <button class="button1">12</button>
