--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -16,9 +16,9 @@
           <p>CART</p>
         </div>
 
-        <hr style="height:3px;color:black;background-color:black;margin-left:0; margin-bottom: 4rem;">
+        <hr>
 
-        <h2 style="font-weight: 300;font-size: 28px;">Our hand-made cinnamon rolls</h2>
+        <h2>Our hand-made cinnamon rolls</h2>
 
       </div>
     </header>
